--- a/source/styles/_partials/footer.styl
+++ b/source/styles/_partials/footer.styl
@@ -9,9 +9,9 @@ footer
 
   .laicos-links, .copyright
     @media $laptop
-      col(1/2)
+      column(1/2)
     @media $hd
-      col(1/2)
+      column(1/2)
 
   .laicos-links
     margin 0 auto !important
