--- a/source/styles/_partials/page.styl
+++ b/source/styles/_partials/page.styl
@@ -28,7 +28,7 @@ article
     margin-top $half-headspace
 
     .updated
-      col(1/2)
+      column(1/2)
       vertically-align()
       text-align center
       move(1/4)
@@ -36,7 +36,7 @@ article
       margin-bottom 0
 
     .post-nav
-      col(1/4)
+      column(1/4)
       vertically-align()
 
     .prev
@@ -50,12 +50,12 @@ article
 
     @media $mobile
       .updated
-        col(1)
+        column(1)
         unmove(1/4)
         text-align center
 
       .post-nav
-        col(1/2)
+        column(1/2)
 
       .prev
         unmove(-1/2)
