--- a/source/styles/_partials/base.styl
+++ b/source/styles/_partials/base.styl
@@ -235,7 +235,7 @@ section
 .factoid, .thumb
   stack()
   border-radius $border-radius
-  col(1/3, cycle: 3)
+  column(1/3, $cycle: 3)
 
 .media
   display inline-block
