--- a/source/styles/_partials/navigation.styl
+++ b/source/styles/_partials/navigation.styl
@@ -3,7 +3,7 @@
     nav(8, $nav-background, $nav-link-color)
 
   background $nav-background
-  height auto !important
+  height 75px !important
   overflow hidden
 
   h1
@@ -12,6 +12,9 @@
 
   a.active
     color $nav-active-color
+
+  img
+    margin $burger-spacing 0
 
 #mobile-navbar
   h1
