--- a/source/styles/_themes/extended.styl
+++ b/source/styles/_themes/extended.styl
@@ -38,10 +38,11 @@ $alt-button-hover-font-color = $alt-button-color
 $alt-border-color = $border-color
 $alt-link-color = $dark-base-color
 $alt-visited-link-color = $dark-accent
+$alt-gradient-color = $lite-accent
 
 // inverse theme color
-$inverse-background = $dark-accent
-$inverse-font-color = $base-white
+$inverse-background = $dark-base-color
+$inverse-font-color = $base-offwhite
 $inverse-button-color = $inverse-background
 $inverse-button-font-color = $base-lite-gray
 $inverse-button-border-color = $inverse-button-font-color
