--- a/source/styles/_partials/base.styl
+++ b/source/styles/_partials/base.styl
@@ -10,6 +10,9 @@ h2
   h2()
   border-bottom $border-weight solid $border-color
 
+  .inverse &
+    border-bottom-color $inverse-border-color
+
 h3
   h3()
 
@@ -34,6 +37,7 @@ body
   -webkit-font-smoothing antialiased
   -moz-osx-font-smoothing grayscale
   position relative
+  background $inverse-background
 
 code
   font-family $font-mono
@@ -125,12 +129,18 @@ em
   color tint($font-color, 5%)
   opacity 0.85
 
-h1 a, h2 a, h4 a, p a, li a, span a, figcaption a, a.link, a.anchor
+.muted
+  color tint($font-color, 5%)
+
+  .inverse &
+    color alpha($inverse-font-color, 0.7)
+
+h1 a, h2 a, h4 a, p a, li a, span a, figcaption a, a.link, a.anchor, address a
   link($link-color, 'glow')
 
-.inverse a
-  reset-link()
-  link($link-color, 'lighten')
+  .inverse &
+    reset-link()
+    link($link-color, 'lighten')
 
 nav a:visited
   color $nav-link-color
@@ -177,8 +187,11 @@ a.inverse-btn:visited
 p
   paragraph($font-size)
 
-.big, big
+.big, big, .big p, big p
   font-size 115%
+
+.xl, xl, .xl p, xl p
+  font-size 125%
 
 hr
   rule(alpha($base-color, .65))
@@ -201,28 +214,87 @@ dt
   text-align left
 
 img
-  border-radius $border-radius
-  margin-bottom $half-headspace
+  margin $half-headspace 0
+
   &.fit
     col 1
     max-width 100%
 
+  &.headshot
+    margin $half-headspace $half-headspace $quarter-headspace 0
+    max-width 25%
+    min-width 2em
+    border-radius 20px
+
   &.cover
     object-fit cover
 
+iframe
+  min-height 450px
+  border 0
+  frameborder 0
+
 section
-  // center($max-width)
   background $background
+  padding $full-headspace 0
 
   &.alt
     color $alt-font-color
     background $alt-background
-    padding $full-headspace 0
 
   &.inverse
     color $inverse-font-color
     background $inverse-background
-    padding $full-headspace 0
+
+.parallax section
+  background alpha($background, 0.8)
+  text-shadow 2px 2px 2em $background
+
+  &.alt
+    color $alt-font-color
+    background alpha($alt-background, 0.2)
+    text-shadow 2px 2px 2em $alt-background
+
+  &.inverse
+    color $inverse-font-color
+    background alpha($inverse-background, 0.2)
+    text-shadow 2px 2px 2em $inverse-background
+
+.one
+  column(1)
+
+.half
+  column(1/2)
+
+  &.stack
+    column(1/2, $cycle: 2)
+
+    @media $mobile
+      stack()
+
+.third
+  column(1/3)
+
+  &.stack
+    column(1/3, $cycle: 3)
+
+    @media $mobile
+      stack()
+
+.fourth
+  column(1/4)
+
+  &.stack
+    column(1/4, $cycle: 4)
+
+    @media $mobile
+      stack()
+
+.two-thirds
+  column(2/3)
+
+.three-fourths
+  column(3/4)
 
 #container
   height 100%
@@ -232,22 +304,25 @@ section
   position relative
   center($container-width)
 
+figure, .figure
+  figure($border-color, 300)
+
+.half-width
+  max-width 50%
+
 .factoid, .thumb
   stack()
   border-radius $border-radius
   column(1/3, $cycle: 3)
 
 .media
-  display inline-block
-  overflow hidden
-  &>:first-child
-    float left
-    margin 0 $full-gutter 0
-  &>:last-child
-    float right
+  media: $full-gutter
 
-.el
+.left
   float left
+
+.right
+  float right
 
 .arrow
   icon-arrow($color: $divider-color)
@@ -257,6 +332,9 @@ section
 
 .inline-list
   inline-list()
+
+.centered
+  center(50%)
 
 .bordered-list
   ol('none')
