--- a/source/styles/_partials/footer.styl
+++ b/source/styles/_partials/footer.styl
@@ -1,3 +1,7 @@
+#laicosIcons svg
+  position absolute
+  margin-left -100%
+
 footer
   height auto
   overflow auto
@@ -21,7 +25,6 @@ footer
     width $icon-width
     height @width
     float left
-    margin-right $half-gutter
     fill $font-color
 
   svg.laicos-icon:hover
