--- a/source/styles/_partials/page.styl
+++ b/source/styles/_partials/page.styl
@@ -16,6 +16,7 @@ article
     text-align center
     ul:first-child
       bold()
+
     li
       overflow hidden
       text-overflow ellipsis
@@ -68,3 +69,39 @@ article
 
     a
       link($link-color, 'glow')
+
+#sectionList
+  width 100%
+  min-height 100%
+  background url('../images/fractal_o.svg')
+  background-size cover
+
+  // don't forget to add mobile stylings
+  &.parallax
+    background-attachment fixed
+    background-position center
+    background-repeat no-repeat
+
+#divisions
+  figcaption
+    text-align: left
+
+  img
+    border none
+
+#team
+  .name
+    margin-bottom 0
+
+  .position
+    margin-top 0
+
+.copy
+  padding-top $half-headspace
+
+.laicos-list
+  padding-top $full-headspace
+
+  li
+    float none
+    display inline-block
