--- a/source/styles/_partials/page.styl
+++ b/source/styles/_partials/page.styl
@@ -89,12 +89,18 @@ article
   img
     border none
 
+    @media $mobile
+      margin 0
+
 #team
   .name
-    margin-bottom 0
+    margin 0
 
   .position
     margin-top 0
+
+  .person
+    margin $quarter-headspace 0
 
 .copy
   padding-top $half-headspace
