--- a/source/styles/_partials/page.styl
+++ b/source/styles/_partials/page.styl
@@ -108,6 +108,9 @@ article
 .laicos-list
   padding-top $full-headspace
 
+  @media $tablet
+    margin-left -25px
+
   li
     float none
     display inline-block
