--- a/source/styles/_partials/page.styl
+++ b/source/styles/_partials/page.styl
@@ -111,6 +111,9 @@ article
   @media $tablet
     margin-left -25px
 
+  @media $laptop
+    margin-left -25px
+
   li
     float none
     display inline-block
