--- a/source/styles/_partials/base.styl
+++ b/source/styles/_partials/base.styl
@@ -142,8 +142,22 @@ h1 a, h2 a, h4 a, p a, li a, span a, figcaption a, a.link, a.anchor, address a
   link($link-color, 'glow')
 
   .inverse &
-    reset-link()
-    link($inverse-link-color, 'lighten')
+    link($inverse-link-color, 'glow')
+
+    &:hover
+      color $inverse-link-color
+
+  &:visited
+    color $visited-link-color
+
+    &:hover
+      color $link-color
+
+    .inverse &
+      color $inverse-visited-link-color
+
+      &:hover
+        color $inverse-link-color
 
 nav a:visited
   color $nav-link-color
@@ -168,9 +182,6 @@ nav a.active
   padding-right 10px
   margin-left -27px
   display none
-
-a:visited
-  color $visited-link-color
 
 .breadcrumb a:visited, h2 a:visited
   color $link-color
@@ -229,7 +240,7 @@ img
 
   &.headshot
     margin 0 $full-gutter $quarter-headspace 0
-    max-width 25%
+    max-width 28%
     min-width 2em
     border-radius 20px
 
@@ -258,17 +269,23 @@ section
 
 .parallax section
   background alpha($background, 0.8)
-  text-shadow 2px 2px 2em $background
+
+  // & a
+  //   text-shadow 2px 2px 10px $link-color
 
   &.alt
     color $alt-font-color
     background alpha($alt-background, 0.8)
-    text-shadow 2px 2px 2em $alt-background
+
+    // & a
+    //   text-shadow 2px 2px 10px $alt-link-color
 
   &.inverse
     color $inverse-font-color
-    background alpha($inverse-background, 0.8)
-    text-shadow 2px 2px 2em $inverse-background
+    background alpha($inverse-background, 0.7)
+
+    // & a
+    //   text-shadow 2px 2px 10px $inverse-link-color
 
 .one
   column(1)
