Update logos and styles

--- a/source/styles/_partials/navigation.styl
+++ b/source/styles/_partials/navigation.styl
@@ -6,6 +6,9 @@
   height auto !important
   overflow hidden
 
+  ul li a:hover
+    color $nav-active-color
+
   h1
     margin 0
     padding-left 0
