--- a/source/styles/_themes/material-red.styl
+++ b/source/styles/_themes/material-red.styl
@@ -7,9 +7,11 @@ $lite-base-color = #ff5f52
 $dark-base-color = #8e0000
 
 $accent = #00838f
-$lite-accent = #4fb3bf
+$lite-accent = #FDF6E3
 $dark-accent = #005662
 $accent-is-dark = true
+$lite-accent-is-dark = false
+$dark-accent-is-dark = true
 
 $base-alpha = alpha($base-color, 2%)
 $base-white = blend($base-alpha, $white)
