--- a/source/styles/_partials/base.styl
+++ b/source/styles/_partials/base.styl
@@ -159,10 +159,7 @@ h1 a, h2 a, h4 a, p a, li a, span a, figcaption a, a.link, a.anchor, address a
       &:hover
         color $inverse-link-color
 
-nav a:visited
-  color $nav-link-color
-
-nav h1 a:visited:hover
+nav a:visited, nav h1 a:visited:hover
   color $nav-link-color
 
 nav a
