--- a/source/styles/_partials/page.styl
+++ b/source/styles/_partials/page.styl
@@ -73,7 +73,7 @@ article
 #sectionList
   width 100%
   min-height 100%
-  background url('../images/fractal_o.svg')
+  background url('/images/fractal_o.svg')
   background-size cover
 
   // don't forget to add mobile stylings
